Fix color precedence in dark mode canvas background

--- a/css/activities.css
+++ b/css/activities.css
@@ -636,8 +636,6 @@ table {
 
 #canvas {
   overflow-y: visible;
-  background-color: #FFFFFF; 
-  width: 100%;
 }
 
 #statusDiv {
